app-dev/styles/base/base.css
/* ... */
	.tabular > .f-list {
		animation: reveal-content 0.35s ease-out;
		}
		.tabular > .header {
			position: relative;
			z-index: 2;
		}
		.tabular > .footer {
			position: relative;
			z-index: 3;
		}
		.tabular > .f-list > li {
			position: relative;
			z-index: 0;
		}
		.tabular > .f-list > li.selectable {
			cursor: pointer;
		}
		.tabular > .f-list > li.selectable.seletcor-is-checkbox {
			animation: tabular-list-item-deselected 0.5s ease-out;
		}
		.tabular > .f-list > li.selectable.selected {
			animation: tabular-list-item-selected 0.5s ease-out;
		}
		@keyframes tabular-list-item-deselected {
			0%   { transform: scale(1); }
			20%  { transform: scale(0.987); }
			100% { transform: scale(1); }
		}
		@keyframes tabular-list-item-selected {
			0%   { transform: scale(1); }
			20%  { transform: scale(0.987); }
			100% { transform: scale(1); }
		}


		.tabular > .header      > *,
		.tabular > .footer      > *,
		.tabular > .f-list > li > * {
			display: inline-block;
			vertical-align: top;
			padding: 6px 8px;
			margin: -6px -8px;
		}
		.tabular > .f-list > li * {
			transition-duration: 0.1s;
		}
		.tabular > .f-list > li .caption-cell {
		}
		.tabular > .header .last-cell,
		.tabular > .footer .last-cell {
			display: block;
			position: absolute;
			top: 0;
			bottom: 0;
			right: 0;
			padding: 0;
			margin: 0;
		}
		.tabular > .f-list > li .last-cell {
			display: block;
			position: absolute;
			right: 0;
			top: 0;
			bottom: 0;
			height: 19px;
			margin-top: auto;
			margin-bottom: auto;
			text-align: right;
		}
		.tabular > .f-list > li a {
			padding: 6px 10px;
			margin: -6px -10px;
			border-radius: 4px;
		}
		.tabular > .header      input,
		.tabular > .footer      input,
		.tabular > .f-list > li input,
		.tabular > .header      select,
		.tabular > .footer      select,
		.tabular > .f-list > li select {
			margin: 0;
		}

		.tabular > .header button,
		.tabular > .footer button,
		.tabular > .header [role="button"],
		.tabular > .footer [role="button"] {
			display: block;
			margin: -5px 0;
		}


dl.initially-collapsed {
	}

	dl.initially-collapsed dt {
		position: static;
		margin: 0;
		cursor: pointer;
	}

	dl.initially-collapsed dd {
		position: static;
		margin: 0;
		/* display: none; */
		height: 0;
		overflow: hidden;
		transition-property: height;
		transition-duration: 0.5s;
		transition-timing-function: ease-out;
	}

	dl.initially-collapsed dt.expanded + dd,
	dl.initially-collapsed dd.expanded {
		display: block;
		height: auto;
	}

	dl.initially-collapsed dt > .content { /* enable paddings for beautiful hover effects */
		position: relative; /* must be relative to make sure jQuery sliding work */
	}
	dl.initially-collapsed dd > .content { /* make sure :before/:after psuedo elements following the sliding animation/transition, if any */
		position: relative;
	}
	dl.initially-collapsed dd .content,
	dl.initially-collapsed dd,
	dl.initially-collapsed dt {
		border-style: inherit;
		border-color: inherit;
	}


ol.f-list, ul.f-list { /* function list */
	padding: 0;
	}

	ol.f-list > li, ul.f-list > li {
		padding: 0;
		margin: 0;
		display: block;
		list-style: none;
	}


.dialog {
	display: block;
	box-sizing: border-box;
	position: relative;

	border-radius: 0;
	border-width: 1px;
	border-style: solid;
	overflow: visible; /* for deco borders */
	}

	.dialog-header {
		box-sizing: border-box;
		clear: both;
		min-height: 2.4rem;
		padding: 0.8rem 1rem 0.4rem 1rem;
		font-size: 0.8rem;
		line-height: 1.2rem;
		text-align: center;
		white-space: nowrap;
		text-overflow: ellipsis;
		}

		.dialog-header h1,
		.dialog-header h2,
		.dialog-header h3,
		.dialog-header h4,
		.dialog-header h5 {
			display: inline-block;
			padding: 0.25rem 0.5rem;
			margin: -0.25rem -0.5rem;
			line-height: inherit;
		}

	.dialog-footer {
		box-sizing: border-box;
		clear: both;
		padding: 0;
		text-align: center;
		border-width: 1px 0 0 0;
		border-style: solid;
		white-space: nowrap;
		overflow: hidden;
		font-size: 0;
		}

		.dialog-footer .col {
			display: inline-block;
			vertical-align: top;
			width: 50%;
			box-sizing: border-box;
			text-align: center;
			border-width: 0;
			border-color: inherit;
		}

		.dialog-footer .col ~ .col {
			border-left-width: 1px;
			border-left-style: solid;
		}

		.dialog-footer input[type="reset"]:hover,
		.dialog-footer input[type="reset"],
		.dialog-footer input[type="button"]:hover,
		.dialog-footer input[type="button"],
		.dialog-footer input[type="submit"]:hover,
		.dialog-footer input[type="submit"],
		.dialog-footer button:hover,
		.dialog-footer button {
			background-color: transparent;
			border-color: transparent;
			display: inline-block;
			vertical-align: top;
			box-sizing: border-box;
			font-size: 18px;
			height: 2.4rem;
			width: 100%;
			margin: 0;
			padding: 0;
		}

	.dialog-body {
		box-sizing: border-box;
		position: relative;
		overflow-x: auto;
		overflow-y: auto;
		-webkit-overflow-scrolling: touch;
		}

		.dialog-body > .content {
			box-sizing: border-box;
			padding: 0;
		}

		.dialog-body {
			padding: 0.75rem 0;
		}

		.dialog-body > .content {
			}

			.dialog-body > .content article p {
				line-height: 1.5;
			}


	.popup-window .dialog {
		border-radius: 0.7rem;
		overflow: hidden;
		border-width: 0;
		width: 100%;
		height: 100%;
		max-width: 100%;
		max-height: 100%;
		box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
		transition-property: none;

		animation-timing-function: cubic-bezier(.51,1.23,.87,1);
		animation-duration: 0.35s;
		animation-name: dialog-shows-up;
		}

		@keyframes dialog-shows-up {
			0% { opacity: 0; transform: translateY(9rem) scale(0.75, 0.75); }
			to { opacity: 1; transform: translateY(0) scale(1, 1); }
		}


.pagination {
	text-align: center;
	padding: 15px 20px;
	margin-bottom: 30px;
	}
	.pagination [role="button"],
	.pagination button {
		border-radius: 2px;
		padding: 4px 9px;
		height: 12px;
		line-height: 12px;
		min-height: 12px;
		min-width: 12px;
		margin: 6.02px;
	}
/* ... */

